<resources>
    <string name="app_name">Quizz Master</string>

    <string name="quizzmaster">QuizzMaster</string>
    <string name="new_game">New Game</string>
    <string name="show_scores">Show scores</string>
    <string name="settings">Settings</string>
    <string name="select_the_game_mode">Select the game mode</string>
    <string name="create_a_player">Create player</string>
    <string name="player_name">Player name</string>
    <string name="validate">Validate</string>
    <string name="load_player">Load player</string>
    <string name="load_a_player">Load a player</string>
    <string name="create_question_replacement">Create question %s out of %s</string>
    <string name="create_question">Create question</string>
    <string name="create_player_replacement">Create player %s out of %s</string>
    <string name="question">Question</string>
    <string name="first_answer">First answer</string>
    <string name="second_answer">Second answer</string>
    <string name="third_answer">Third answer</string>
    <string name="fourth_answer">Fourth answer</string>
    <string name="clue">Clue</string>
    <string name="player_name_take">This player name is already taken</string>
    <string name="invalid_fields">The fields are not valid (missing or erroneous values)</string>
    <string name="language">Language</string>
    <string name="enable_sound">Enable sound</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="first_player_questions">First player questions</string>
    <string name="next_player_questions">Next player questions</string>
    <string name="question_category">Question category</string>
    <string name="question_difficulty">Question difficulty</string>
    <string name="current_player">Current player</string>
    <string name="question_timer">Question timer</string>
    <string name="s_s">%s/%s</string>
    <string name="skip">Skip</string>
    <string name="remove_one">Remove one</string>
    <string name="current_question">Current question</string>
    <string name="player_found_answer">Well done, the player %s found the answer</string>
    <string name="wrong_answer">Wrong answer, the correct answer was the number %s</string>
    <string name="player_turn">It\'s %s\'s turn</string>
    <string name="time_over">Time is over !</string>
    <string name="player_selected">Player selected !</string>
    <string name="no_bonus">You don\'t have enough bonus point</string>

    <string-array name="languages">
        <item>fr</item>
        <item>en</item>
    </string-array>
</resources>
