<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity" >

    <TextView
        android:id="@+id/txt_quizz_master"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/quizzmaster"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_new_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_new_game"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/new_game"
        app:layout_constraintBottom_toTopOf="@+id/btn_show_score"
        app:layout_constraintEnd_toEndOf="@+id/btn_show_score"
        app:layout_constraintStart_toStartOf="@+id/btn_show_score" />

    <Button
        android:id="@+id/btn_show_score"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/show_scores"
        app:layout_constraintBottom_toTopOf="@+id/btn_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_show_score"
        app:layout_constraintStart_toStartOf="@+id/btn_show_score" />

    <Spinner
        android:id="@+id/spinner_game_mode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_new_game"
        app:layout_constraintEnd_toEndOf="@+id/btn_new_game"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="@+id/btn_new_game" />

    <TextView
        android:id="@+id/txt_game_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/select_the_game_mode"
        app:layout_constraintBottom_toTopOf="@+id/spinner_game_mode"
        app:layout_constraintEnd_toEndOf="@+id/spinner_game_mode"
        app:layout_constraintStart_toStartOf="@+id/spinner_game_mode" />
</android.support.constraint.ConstraintLayout>